# redcell

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent-harness-xtra/: README.md
agentgateway/: config.yaml
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  rag.md  security.md  server-api.md  tools-and-gateway.md
examples/: demo_agent.py
redcell/: __init__.py  accounting.py  agent.py  cli.py  compaction.py  config.py  gateway.py  guardrails.py  llm.py  mcp.py  memory.py  observability.py  pathpolicy.py  permissions.py  pricing.py  prompts.py  qdrant.py  searxng.py  server.py  sessions.py  shellpolicy.py  toolpolicy.py  tools.py
redcell/rag/: __init__.py  documents.py  seed.py
redcell/rag/corpus/: __init__.py  seed_corpus.json
tests/: conftest.py  test_accounting.py  test_agent.py  test_cli.py  test_compaction.py  test_config.py  test_documents.py  test_exports.py  test_gateway.py  test_guardrails.py  test_llm.py  test_mcp.py  test_memory.py  test_observability.py  test_pathpolicy.py  test_permissions.py  test_prompts.py  test_qdrant.py  test_rag.py  test_searxng.py  test_server.py  test_sessions.py  test_shellpolicy.py  test_tools.py
